--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <!-- <meta charset="utf-8"> -->
     <title>Portfolio | Stephanie Hawkins</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Material Design Lite -->
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-lime.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
